The selectedindex is now getting set to -1 when there are no more items selected and it is sending onchange events by clearing the mOldSelectedIndex. Bug 68135 r=kmcclusk sr=attinasi a=dbaron